# FTK

./: .gitignore  FTK.code-workspace  Fusion.code-workspace  README.md  Readme.md
.github/ISSUE_TEMPLATE/: bug_report.md
FTK-Core/: .cquery  CMakeLists.txt  FTK-Core.kdev4  Fusion-Core.cbp  compile_commands.json
FTK-Core/.kdev4/: FTK-Core.kdev4
FTK-Core/ext/ftgl/: ftgl.kdev4
FTK-Core/ext/ftgl/.kdev4/: ftgl.kdev4
FTK-Core/src/: main.cpp
FTK-Core/src/base/: ftkobject.cpp  ftkobject.h
FTK-Core/src/graphics/: color.h  nativewindow.cpp  nativewindow.h  shader.cpp  shader.h  texture.cpp  texture.h
FTK-Core/src/graphics/buffers/: buffer.cpp  buffer.h  indexbuffer.cpp  indexbuffer.h  vertexarray.cpp  vertexarray.h
FTK-Core/src/graphics/groups/: group.cpp  group.h
FTK-Core/src/graphics/layers/: layer.cpp  layer.h  tilelayer.cpp  tilelayer.h
FTK-Core/src/graphics/renderables/: label.cpp  label.h  renderable2D.h  sprite.cpp  sprite.h  static_sprite.cpp  static_sprite.h
FTK-Core/src/graphics/renderers/: batchrenderer2D.cpp  batchrenderer2D.h  renderer2D.h  simple2Drenderer.cpp  simple2Drenderer.h
FTK-Core/src/graphics/ui/: ftkUI.cpp  ftkUI.h  ftkbutton.h  ftkgroup.h  ftkmenu.cpp  ftkmenu.h  ftkpanel.cpp  ftkpanel.h  ftktogglebutton.cpp  ftktogglebutton.h  ftkviewport.cpp  ftkviewport.h  ftkwindow.cpp  ftkwindow.h
FTK-Core/src/input/: input.cpp  input.h
FTK-Core/src/mathLibs/: mathLib.cpp  mathLib.h
FTK-Core/src/signals/: panelpositionsignal.h  panelsizesignal.h  signal.h  viewportsizesignal.h
FTK-Core/src/utils/: fileutils.h  imageload.h  timer.h
Fusion-Core/: CMakeCache.txt  CMakeLists.txt  Fusion-Core.kdev4  Makefile  Makefile.bak  cmake_install.cmake  compile_commands.json
Fusion-Core/.kdev4/: Fusion-Core.kdev4
Fusion-Core/res/: tex1.kra  tex1.kra~
Fusion-Core/src/: main.cpp
Fusion-Core/src/graphics/: batchrenderer2D.cpp  batchrenderer2D.h  color.h  fusionUI.cpp  fusionUI.h  fusionbutton.h  fusionmenu.h  fusiontogglebutton.h  fusionwindow.cpp  fusionwindow.h  renderable2D.h  renderer2D.h  shader.cpp  shader.h  simple2Drenderer.cpp  simple2Drenderer.h  sprite.cpp  sprite.h  static_sprite.cpp  static_sprite.h  texture.cpp  texture.h  window.cpp  window.h
Fusion-Core/src/graphics/buffers/: buffer.cpp  buffer.h  indexbuffer.cpp  indexbuffer.h  vertexarray.cpp  vertexarray.h
Fusion-Core/src/graphics/groups/: group.cpp  group.h
Fusion-Core/src/graphics/layers/: layer.cpp  layer.h  tilelayer.cpp  tilelayer.h
Fusion-Core/src/graphics/renderables/: label.cpp  label.h  renderable2D.h  sprite.cpp  sprite.h  static_sprite.cpp  static_sprite.h
Fusion-Core/src/graphics/renderers/: batchrenderer2D.cpp  batchrenderer2D.h  renderer2D.h  simple2Drenderer.cpp  simple2Drenderer.h
Fusion-Core/src/graphics/ui/: fusionUI.cpp  fusionUI.h  fusionbutton.h  fusionmenu.cpp  fusionmenu.h  fusionpanel.h  fusiontogglebutton.cpp  fusiontogglebutton.h  fusionviewport.cpp  fusionviewport.h  fusionwindow.cpp  fusionwindow.h
Fusion-Core/src/input/: input.cpp  input.h
Fusion-Core/src/mathLibs/: mathLib.cpp  mathLib.h
Fusion-Core/src/shaders/: basic.frag  basic.vert
Fusion-Core/src/signals/: panelpositionsignal.h  panelsizesignal.h  signal.h  viewportsizesignal.h  windowupdatesignal.cpp  windowupdatesignal.h
Fusion-Core/src/utils/: fileutils.h  imageload.h  timer.h
